// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle Input renders checked without crashing 1`] = `
<Toggle$1
  input={
    Object {
      "name": "toggle-input",
      "onBlur": [Function],
      "onChange": [Function],
      "onFocus": [Function],
      "value": true,
    }
  }
  meta={Object {}}
>
  <div
    className=" Toggle-module_labelContainerRight__3t8zx cursor-pointer "
    data-checked={true}
    data-qa="toggle"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="Toggle-module_containerActive__1jtDw"
    >
      <div
        className="Toggle-module_toggleActive__33s_R"
      />
    </div>
  </div>
</Toggle$1>
`;

exports[`Toggle Input renders unchecked without crashing 1`] = `
<Toggle$1
  input={
    Object {
      "name": "toggle-input",
      "onBlur": [Function],
      "onChange": [Function],
      "onFocus": [Function],
      "value": false,
    }
  }
  meta={Object {}}
>
  <div
    className=" Toggle-module_labelContainerRight__3t8zx cursor-pointer "
    data-checked={false}
    data-qa="toggle"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="Toggle-module_containerInactive__3RAMH"
    >
      <div
        className="Toggle-module_toggleInactive__1lJfx"
      />
    </div>
  </div>
</Toggle$1>
`;
